--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Playfair Display';
+  font-family: Roboto;
 }
 
 h1 {
@@ -8,7 +8,7 @@ h1 {
 }
 
 p {
-  text-align: left;
+  text-align: center;
 }
 
 .container {
@@ -27,4 +27,8 @@ p {
 p.paragraph {
   color: #fff;
   padding: 10%;
+}
+
+.button_styling {
+  a: center;
 }
